fixed cockpit tab issue on IE

--- a/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
@@ -1473,6 +1473,9 @@
 					md-pagination-wrapper {
 						.md-tab {
 							span {
+								&.viewModeSheet {
+									top: -1px;
+								}
 								top: -8px;
 							}
 						}
